# prostheses

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
code/: check.py
codez/: check.py  run.py
conf/data_loading/: data_loading.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
docs/: conf.py  core_arch.rst  index.rst  modules.rst
notebooks/: PreprocessTorch.ipynb  db1_trainTorch.ipynb
outputs/2025-04-09/01-23-31/.hydra/: config.yaml  hydra.yaml
pl_modules/: 0.12.10  core_arch.py  data.py  model.py  train.py
pl_modules/mlruns/0/: meta.yaml
pl_modules/mlruns/191912357543723579/: meta.yaml
pl_modules/mlruns/191912357543723579/02eec3406b5a4bcf88e08ee8e9dfcb03/: meta.yaml
pl_modules/mlruns/191912357543723579/47f504dbd57345b19d46b3915577233a/: meta.yaml
pl_modules/mlruns/191912357543723579/47f504dbd57345b19d46b3915577233a/metrics/: epoch  loss  train_acc  val_acc
pl_modules/mlruns/191912357543723579/5bb464f62fce43ac9e48ba1ed59a25c6/: meta.yaml
pl_modules/mlruns/191912357543723579/5bb464f62fce43ac9e48ba1ed59a25c6/params/: model
pl_modules/mlruns/191912357543723579/8299e9e6d0fa4a1784a51e593b06a403/: meta.yaml
pl_modules/mlruns/191912357543723579/a470484c885a4d8dafa46b6e6a7d4168/: meta.yaml
pl_modules/mlruns/191912357543723579/c2b29d3bce544d5a85c72c24d4437d6b/: meta.yaml
wandb/offline-run-20250409_012630-h181l67l/: run-h181l67l.wandb
wandb/offline-run-20250409_012630-h181l67l/files/: requirements.txt  wandb-metadata.json
(+2 files in other folders)
