[project]
name = "prostheses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
    "autoreload>=0.1.2",
    "dvc>=3.59.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.16.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.6",
    "notebook>=7.3.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-regressions>=2.7.0",
]

[tool.isort]
src_paths = ["code"]
profile = "black"
line_length = 90
lines_after_imports = 2
